--- a/homepage.html
+++ b/homepage.html
@@ -11,10 +11,19 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/circular-font.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
-  <body class="data-bs-theme=dark">
+  <body data-bs-theme="dark">
     <div class="container-fluid">
-      <div class="row"></div>
+      <div class="row">
+        <div class="col-3">Left-Side</div>
+        <div class="col-7">Center</div>
+        <div class="col-2">Right-Side</div>
+        <div class="col-12">Player</div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
