--- a/artist.html
+++ b/artist.html
@@ -20,7 +20,9 @@
   <body data-bs-theme="dark">
     <div class="container-fluid">
       <div class="row">
-        <div class="d-none d-md-block col-md-2 pe-0 bg-black">
+        <!-- NAVBAR DI SINISTRA -->
+
+        <div class="d-none d-md-block col-md-3 pe-0 bg-black2">
           <nav>
             <a
               class="text-white"
@@ -65,32 +67,346 @@
               </ul>
             </div>
           </nav>
+
+          <hr class="division m-0" />
+          <div id="side-scroll" class="custom-padding m-2">
+            <ul>
+              <li>
+                <a class="nav-link" href="#"
+                  >early stage emily syndrome (sett-ott 2022)</a
+                >
+              </li>
+              <li>
+                <a class="nav-link" href="#">Be The Young</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#"
+                  >"... cit. Kimiko (lug-ago 2022)"</a
+                >
+              </li>
+              <li>
+                <a class="nav-link" href="#">Saggio vibes</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#"
+                  >main character energy (mag-giu 2022)</a
+                >
+              </li>
+              <li>
+                <a class="nav-link" href="#">that fucking mood</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#"
+                  >VEE, CARLOTTA E GIACOMO VANNO A BOSIO</a
+                >
+              </li>
+              <li>
+                <a class="nav-link" href="#"
+                  >An Emily Winchester kind of mood</a
+                >
+              </li>
+              <li>
+                <a class="nav-link" href="#">landing page (mar-apr 2022)</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#">2021 lol</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#"
+                  >cosa cazzo vuol dire questa affermazione (gen-feb 2022)</a
+                >
+              </li>
+
+              <li>
+                <a class="nav-link" href="#"
+                  >honey and glasses (nov-div 2021)</a
+                >
+              </li>
+
+              <li>
+                <a class="nav-link" href="#">(Revenge Training Arc)</a>
+              </li>
+
+              <li>
+                <a class="nav-link" href="#">Lidia Emily</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#"
+                  >minecraft e nintendo switch (sept-oct 2021)</a
+                >
+              </li>
+              <li>
+                <a class="nav-link" href="#">landing page (mar-apr 2022)</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#">2021 lol</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#"
+                  >cosa cazzo vuol dire questa affermazione (gen-feb 2022)</a
+                >
+              </li>
+
+              <li>
+                <a class="nav-link" href="#"
+                  >honey and glasses (nov-div 2021)</a
+                >
+              </li>
+
+              <li>
+                <a class="nav-link" href="#">(Revenge Training Arc)</a>
+              </li>
+
+              <li>
+                <a class="nav-link" href="#">Lidia Emily</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#"
+                  >minecraft e nintendo switch (sept-oct 2021)</a
+                >
+              </li>
+              <li>
+                <a class="nav-link" href="#"
+                  >honey and glasses (nov-div 2021)</a
+                >
+              </li>
+
+              <li>
+                <a class="nav-link" href="#">(Revenge Training Arc)</a>
+              </li>
+
+              <li>
+                <a class="nav-link" href="#">Lidia Emily</a>
+              </li>
+              <li>
+                <a class="nav-link" href="#"
+                  >minecraft e nintendo switch (sept-oct 2021)</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-        <hr class="division m-0" />
-        <div id="side-scroll" class="custom-padding">
-          <ul>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
 
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
+        <!-- PARTE CENTALE -->
 
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-
-            <li><a class="nav-link" href="#">La mia playlist</a></li>
-          </ul>
+        <div
+          class="col-12 col-md-10 col-lg-7 text-white MainContent p-0 pb-5"
+          id="MainContentArtist"
+        >
+          <div
+            class="barraUtente d-flex justify-content-between align-items-center"
+          >
+            <div class="ps-2">
+              <button class="btn px-1" type="button">
+                <i
+                  class="bi bi-arrow-left-circle fs-4 text-secondary"
+                ></i></button
+              ><button class="btn px-1" type="button">
+                <i class="bi bi-arrow-right-circle fs-4 text-secondary"></i>
+              </button>
+            </div>
+            <div class="dropdown d-none d-md-block">
+              <a
+                class="btn rounded-pill bg-black2 py-0 ps-0 dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <i class="bi bi-person-circle me-1"></i>Team 8
+              </a>
+              <ul class="dropdown-menu bg-black2">
+                <li><a class="dropdown-item" href="#">View profile</a></li>
+                <li><a class="dropdown-item" href="#">Edit profile</a></li>
+                <li><a class="dropdown-item" href="#">Settings</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div class="col-7">Center</div>
-        <div class="col-2">Right-Side</div>
-        <div class="col-12">Player</div>
+
+        <!-- PARTE DI DESTRA -->
+
+        <div class="siderbarRx d-none d-lg-block col-lg-2 bg-black2">
+          <div class="custom-right-side pt-4 container-fluid">
+            <div
+              class="d-flex fs-5 justify-content-between text-white align-items-center mb-3"
+            >
+              <span style="font-size: 1rem">Attività Amici</span>
+              <div class="sideIconsRx d-flex justify-content-between">
+                <i class="bi bi-person-plus me-2" style="font-size: 1rem"></i>
+                <i class="bi bi-x-lg" style="font-size: 1rem"></i>
+              </div>
+            </div>
+            <div class="row d-flex flex-nowrap">
+              <div class="col-2">
+                <img
+                  src="/assets/imgs/search/image-1.jpeg"
+                  alt="dog"
+                  width="45"
+                  height="45"
+                  class="imgFriends1"
+                />
+              </div>
+              <div class="col-10" id="ok">
+                <div class="justify-content-between ps-1" id="ok">
+                  <p class="mb-0">Charlie Hookham</p>
+                  <p class="mb-0 d-flex justify-content-end">4 ore</p>
+                </div>
+                <p class="mb-0 ps-1">
+                  In Camera<i class="bi bi-dot"></i>Yumi Zuma
+                </p>
+                <p class="align-items-center ps-1">
+                  <i class="bi bi-disc pe-1"></i>EP III
+                </p>
+              </div>
+            </div>
+            <div class="row my-3 d-flex flex-nowrap">
+              <div class="col-2">
+                <img
+                  src="/assets/imgs/search/image-1.jpeg"
+                  alt="dog"
+                  width="45"
+                  height="45"
+                  class="imgFriends1"
+                />
+              </div>
+              <div class="col-10" id="ok">
+                <div class="justify-content-between ps-1" id="ok">
+                  <p class="mb-0">lightdark02</p>
+                  <p class="mb-0 d-flex justify-content-end">8 ore</p>
+                </div>
+                <p class="mb-0 ps-1">
+                  Aimed To Kill<i class="bi bi-dot"></i>Jade LeMac
+                </p>
+                <p class="align-items-center ps-1">
+                  <i class="bi bi-disc pe-1"></i>Aimed To Kill
+                </p>
+              </div>
+            </div>
+            <div class="cont-div-img">
+              <div class="second row d-flex flex-nowrap">
+                <div class="col-2">
+                  <img
+                    src="./assets/imgs/search/image-1.jpeg"
+                    alt="dog"
+                    width="45"
+                    height="45"
+                    class="imgFriends1"
+                  />
+                </div>
+                <div class="col-10" id="ok">
+                  <div class="justify-content-between ps-1" id="ok">
+                    <p class="mb-0">Valeria Traverso</p>
+                    <p class="mb-0 d-flex justify-content-end">3 giorni</p>
+                  </div>
+                  <p class="mb-0 ps-1">
+                    New Kings<i class="bi bi-dot"></i>Sleeping Wolf
+                  </p>
+                  <p class="align-items-center ps-1">
+                    <i class="bi bi-music-note-beamed pe-1"></i>Twint Badass
+                    mood
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- PLAYERBAR  -->
+        <div class="container">
+          <div id="play-bar" class="row p-3 position-fixed bottom-0 w-100 z-2">
+            <div class="d-md-none p-3">
+              <div class="d-flex justify-content-around">
+                <a
+                  href="./homepage.html"
+                  class="text-decoration-none text-white pointer"
+                >
+                  <div
+                    class="d-flex flex-column align-items-center justify-content-center"
+                  >
+                    <i class="bi bi-house-door-fill fs-1"></i>
+                    <span>Home</span>
+                  </div>
+                </a>
+                <a
+                  href="./search.html"
+                  class="text-decoration-none text-white pointer"
+                >
+                  <div
+                    class="d-flex flex-column align-items-center justify-content-center"
+                  >
+                    <i class="bi bi-search fs-1"></i>
+                    <span>Cerca</span>
+                  </div>
+                </a>
+                <div
+                  class="d-flex flex-column align-items-center justify-content-end"
+                >
+                  <svg
+                    width="39px"
+                    data-encore-id="icon"
+                    role="img"
+                    aria-hidden="true"
+                    viewBox="0 0 24 24"
+                    class=""
+                    fill="white"
+                  >
+                    <path
+                      d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"
+                    ></path>
+                  </svg>
+                  <span>Libreria</span>
+                </div>
+                <div
+                  class="d-flex flex-column align-items-center justify-content-center"
+                >
+                  <i class="bi bi-spotify fs-1"></i>
+                  <span>Get app</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-3 d-flex pe-5 ps-0 d-none d-md-flex">
+              <img
+                src="./assets/imgs/main/image-12.jpg"
+                alt=""
+                width="100px"
+                id="playbar-img"
+              />
+              <div class="my-auto mx-4">
+                <h5 class="my-1" id="playbar-song-title">Titolo Canzone</h5>
+                <p class="my-1" id="playbar-artist-name">Artista</p>
+              </div>
+              <div class="my-auto">
+                <i class="fs-4 bi bi-heart"></i>
+              </div>
+            </div>
+            <div
+              class="col-6 d-flex flex-column justify-content-center flex-grow-1 px-5 d-none d-md-flex"
+            >
+              <div class="d-flex align-items-center justify-content-center">
+                <i class="fs-3 mx-2 bi bi-shuffle pointer"></i>
+                <i class="fs-3 mx-2 bi bi-skip-backward-fill pointer"></i>
+                <i class="fs-1 mx-2 bi bi-play-circle-fill pointer"></i>
+                <i class="fs-3 mx-2 bi bi-skip-forward-fill pointer"></i>
+                <i class="fs-3 mx-2 bi bi-arrow-repeat pointer"></i>
+              </div>
+              <div class="d-flex gap-2">
+                <span>0:00</span>
+                <input type="range" class="form-range" min="0" max="30" />
+                <span>0:00</span>
+              </div>
+            </div>
+            <div
+              class="col-3 d-flex justify-content-end align-items-center ps-5 pe-0 d-none d-md-flex"
+            >
+              <i class="fs-5 px-2 bi bi-mic pointer"></i>
+              <i class="fs-5 px-2 bi bi-view-list pointer"></i>
+              <i class="fs-5 px-2 bi bi-speaker pointer"></i>
+              <i class="fs-2 me-1 bi bi-volume-down pointer"></i>
+              <i class="fs-5 px-2 bi bi-arrows-angle-expand pointer"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script
