--- a/album.html
+++ b/album.html
@@ -11,7 +11,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/circular-font.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+
     <style>
       .list-group-item {
         display: flex;
@@ -39,47 +43,161 @@
       <div class="row">
         <nav class="col-3 sidebar">
           <div class="list-group mt-3">
-            <a href="#" class="list-group-item bg-transparent text-white border-dark border-dark">
-              <img class="me-4" src="./assets/imgs/dots.svg" width="20" alt="dots"
+            <a
+              href="#"
+              class="list-group-item bg-transparent text-white border-dark border-dark"
+            >
+              <img
+                class="me-4"
+                src="./assets/imgs/dots.svg"
+                width="20"
+                alt="dots"
             /></a>
-            <a href="#" class="list-group-item bg-transparent text-white border-dark border-dark">
-              <img class="me-4" src="./assets/imgs/home.svg" width="20" alt="home" /> Home</a
+            <a
+              href="#"
+              class="list-group-item bg-transparent text-white border-dark border-dark"
             >
-            <a href="#" class="list-group-item bg-transparent text-white border-dark">
-              <img class="me-4" src="./assets/imgs/search.svg" width="20" alt="search" />Cerca</a
+              <img
+                class="me-4"
+                src="./assets/imgs/home.svg"
+                width="20"
+                alt="home"
+              />
+              Home</a
             >
-            <a href="#" class="list-group-item bg-transparent text-white border-dark">
-              <img class="me-4" src="./assets/imgs/library.svg" width="20" alt="libreria" />La Tua Libreria</a
+            <a
+              href="#"
+              class="list-group-item bg-transparent text-white border-dark"
+            >
+              <img
+                class="me-4"
+                src="./assets/imgs/search.svg"
+                width="20"
+                alt="search"
+              />Cerca</a
+            >
+            <a
+              href="#"
+              class="list-group-item bg-transparent text-white border-dark"
+            >
+              <img
+                class="me-4"
+                src="./assets/imgs/library.svg"
+                width="20"
+                alt="libreria"
+              />La Tua Libreria</a
             >
             <div class="mt-4">
-              <a href="#" class="list-group-item bg-transparent text-white border-dark">
-                <img class="me-4" src="./assets/imgs/add-circle.svg" width="20" alt="add" />Crea Playlist</a
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white border-dark"
               >
-              <a href="#" class="list-group-item bg-transparent text-white border-dark">
-                <img class="me-4" src="./assets/imgs/heart.svg" width="20" alt="heart" />Brani che ti piacciono</a
+                <img
+                  class="me-4"
+                  src="./assets/imgs/add-circle.svg"
+                  width="20"
+                  alt="add"
+                />Crea Playlist</a
               >
-              <a href="#" class="list-group-item bg-transparent text-white border-dark">
-                <img class="me-4" src="./assets/imgs/bookmark.svg" width="20" alt="bookmark" />I tuoi episodi</a
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white border-dark"
+              >
+                <img
+                  class="me-4"
+                  src="./assets/imgs/heart.svg"
+                  width="20"
+                  alt="heart"
+                />Brani che ti piacciono</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white border-dark"
+              >
+                <img
+                  class="me-4"
+                  src="./assets/imgs/bookmark.svg"
+                  width="20"
+                  alt="bookmark"
+                />I tuoi episodi</a
               >
             </div>
             <div class="scrollable-block mt-4">
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">early stage emily syndrome (sett-ott 2022)</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">Be The Young</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">"... cit. Kimiko (lug-ago 2022)"</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">Saggio vibes</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">main character energy (mag-giu 2022)</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">that fucking mood</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">VEE, CARLOTTA E GIACOMO VANNO A BOSIO</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">An Emily Winchester kind of mood</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">landing page (mar-apr 2022)</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">2021 lol</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark"
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >early stage emily syndrome (sett-ott 2022)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >Be The Young</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >"... cit. Kimiko (lug-ago 2022)"</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >Saggio vibes</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >main character energy (mag-giu 2022)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >that fucking mood</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >VEE, CARLOTTA E GIACOMO VANNO A BOSIO</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >An Emily Winchester kind of mood</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >landing page (mar-apr 2022)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >2021 lol</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
                 >cosa cazzo vuol dire questa affermazione (gen-feb 2022)</a
               >
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">honey and glasses (nov-div 2021)</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">(Revenge Training Arc)</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">Lidia Emily</a>
-              <a href="#" class="list-group-item bg-transparent text-white small border-dark">minecraft e nintendo switch (sept-oct 2021)</a>
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >honey and glasses (nov-div 2021)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >(Revenge Training Arc)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >Lidia Emily</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >minecraft e nintendo switch (sept-oct 2021)</a
+              >
             </div>
           </div>
         </nav>
@@ -92,17 +210,28 @@
               <h6>Attività Amici</h6>
             </div>
             <div class="icon">
-              <a href="#" class="list-group-item bg-transparent text-white border-dark border-dark">
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white border-dark border-dark"
+              >
                 <img src="./assets/imgs/user-plus.svg" width="20" alt="user"
               /></a>
-              <a href="#" class="list-group-item bg-transparent text-white border-dark border-dark">
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white border-dark border-dark"
+              >
                 <img class="ms-2" src="./assets/imgs/x.svg" width="20" alt="x"
               /></a>
             </div>
           </div>
           <div class="mt-4">
             <div class="friend-item d-flex align-items-center mb-3">
-              <img src="./assets/imgs/search/image-1.jpeg" alt="Profile Picture" class="rounded-circle me-2" width="35" />
+              <img
+                src="./assets/imgs/search/image-1.jpeg"
+                alt="Profile Picture"
+                class="rounded-circle me-2"
+                width="35"
+              />
               <div>
                 <strong>Charlie Hookham</strong> <br />
                 <small>In Camera - Yumi Zouma</small><br />
@@ -111,7 +240,12 @@
               <small class="ms-auto">4 ore</small>
             </div>
             <div class="friend-item d-flex align-items-center mb-3">
-              <img src="./assets/imgs/search/image-1.jpeg" alt="Profile Picture" class="rounded-circle me-2" width="35" />
+              <img
+                src="./assets/imgs/search/image-1.jpeg"
+                alt="Profile Picture"
+                class="rounded-circle me-2"
+                width="35"
+              />
               <div>
                 <strong>lightdark02</strong> <br />
                 <small>Aimed to Kill - Jade LeMac</small><br />
@@ -120,7 +254,12 @@
               <small class="ms-auto">8 ore</small>
             </div>
             <div class="friend-item d-flex align-items-center mb-3">
-              <img src="./assets/imgs/search/image-1.jpeg" alt="Profile Picture" class="rounded-circle me-2" width="35" />
+              <img
+                src="./assets/imgs/search/image-1.jpeg"
+                alt="Profile Picture"
+                class="rounded-circle me-2"
+                width="35"
+              />
               <div>
                 <strong>Valeria Traverso</strong> <br />
                 <small>New Kings - Sleeping Wolf</small><br />
