--- a/homepage.html
+++ b/homepage.html
@@ -11,15 +11,452 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/circular-font.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <style>
+      .list-group-item {
+        display: flex;
+        align-items: center;
+      }
+      .list-group-item img {
+        filter: invert(1);
+      }
+      .scrollable-block {
+        max-height: 49vh;
+        overflow-y: auto;
+      }
+      .side-title {
+        display: flex;
+        justify-content: space-between;
+
+        .icon {
+          display: flex;
+        }
+      }
+
+      /* AGGIUNTO */
+
+      .custom_bg {
+        background: linear-gradient(11deg, black, transparent, transparent);
+      }
+
+      .small_txt {
+        font-size: x-small;
+      }
+
+      body {
+        font-family: "Circular";
+      }
+    </style>
   </head>
   <body data-bs-theme="dark">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-3">Left-Side</div>
-        <div class="col-7">Center</div>
-        <div class="col-2">Right-Side</div>
-        <div class="col-12">Player</div>
+        <nav class="col-3 sidebar bg-black">
+          <div class="list-group mt-3">
+            <a
+              href="#"
+              class="list-group-item bg-transparent text-white border-dark border-dark"
+            >
+              <img
+                class="me-4"
+                src="./assets/imgs/dots.svg"
+                width="20"
+                alt="dots"
+            /></a>
+            <a
+              href="#"
+              class="list-group-item bg-transparent text-white border-dark border-dark"
+            >
+              <img
+                class="me-4"
+                src="./assets/imgs/home.svg"
+                width="20"
+                alt="home"
+              />
+              Home</a
+            >
+            <a
+              href="#"
+              class="list-group-item bg-transparent text-white border-dark"
+            >
+              <img
+                class="me-4"
+                src="./assets/imgs/search.svg"
+                width="20"
+                alt="search"
+              />Cerca</a
+            >
+            <a
+              href="#"
+              class="list-group-item bg-transparent text-white border-dark"
+            >
+              <img
+                class="me-4"
+                src="./assets/imgs/library.svg"
+                width="20"
+                alt="libreria"
+              />La Tua Libreria</a
+            >
+            <div class="mt-4">
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white border-dark"
+              >
+                <img
+                  class="me-4"
+                  src="./assets/imgs/add-circle.svg"
+                  width="20"
+                  alt="add"
+                />Crea Playlist</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white border-dark"
+              >
+                <img
+                  class="me-4"
+                  src="./assets/imgs/heart.svg"
+                  width="20"
+                  alt="heart"
+                />Brani che ti piacciono</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white border-dark"
+              >
+                <img
+                  class="me-4"
+                  src="./assets/imgs/bookmark.svg"
+                  width="20"
+                  alt="bookmark"
+                />I tuoi episodi</a
+              >
+            </div>
+            <div class="scrollable-block mt-4">
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >early stage emily syndrome (sett-ott 2022)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >Be The Young</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >"... cit. Kimiko (lug-ago 2022)"</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >Saggio vibes</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >main character energy (mag-giu 2022)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >that fucking mood</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >VEE, CARLOTTA E GIACOMO VANNO A BOSIO</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >An Emily Winchester kind of mood</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >landing page (mar-apr 2022)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >2021 lol</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >cosa cazzo vuol dire questa affermazione (gen-feb 2022)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >honey and glasses (nov-div 2021)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >(Revenge Training Arc)</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >Lidia Emily</a
+              >
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white small border-dark"
+                >minecraft e nintendo switch (sept-oct 2021)</a
+              >
+            </div>
+          </div>
+        </nav>
+        <div class="col-7 mt-3">
+          <div>
+            <div>
+              <i class="bi bi-arrow-left-circle fs-4 text-secondary me-2"></i
+              ><i class="bi bi-arrow-right-circle fs-4 text-secondary"></i>
+            </div>
+          </div>
+          <!-- ANNUNCI -->
+          <!-- wrap annunci per applicare background -->
+          <div class="p-2 custom_bg">
+            <div class="row">
+              <div class="col-3 pe-0">
+                <img
+                  class="p-2"
+                  src="./assets/imgs/main/image-11.jpg"
+                  style="max-height: 170px"
+                />
+              </div>
+              <div class="col-6">
+                <div class="small_txt"><p>ALBUM</p></div>
+                <div>
+                  <h1 class="m-0">MERCURY</h1>
+                </div>
+                <div class="small_txt"><p>Imagine Dragon</p></div>
+                <div class="small_txt">
+                  Ascolta il nuovo album degli Imagine Dragon!
+                </div>
+                <div class="mt-2">
+                  <button
+                    type="button"
+                    class="btn btn-dark border bs-1 rounded-pill mx-1"
+                  >
+                    Play
+                  </button>
+                  <button
+                    type="button"
+                    class="btn btn-dark border bs-1 rounded-pill mx-1"
+                  >
+                    Salva
+                  </button>
+                  <i class="bi bi-three-dots mx-1"></i>
+                </div>
+              </div>
+              <div class="col-3">
+                <p class="small_txt text-muted">NASCONDI ANNUNCIO</p>
+              </div>
+            </div>
+          </div>
+          <!-- PLAYLIST HOME -->
+          <h4 class="d-block my-3">Buonasera</h4>
+          <div class="row row-cols-2 row-cols-md-3 gy-3">
+            <div class="d-flex col">
+              <img
+                src="./assets/imgs/main/image-18.jpg"
+                style="max-height: 70px"
+              />
+              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+                <div class="p-2">Estate 2022</div>
+              </div>
+            </div>
+            <div class="d-flex col">
+              <img
+                src="./assets/imgs/main/image-18.jpg"
+                style="max-height: 70px"
+              />
+              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+                <div class="p-2">Estate 2022</div>
+              </div>
+            </div>
+            <div class="d-flex col">
+              <img
+                src="./assets/imgs/main/image-18.jpg"
+                style="max-height: 70px"
+              />
+              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+                <div class="p-2">Estate 2022</div>
+              </div>
+            </div>
+            <div class="d-flex col">
+              <img
+                src="./assets/imgs/main/image-18.jpg"
+                style="max-height: 70px"
+              />
+              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+                <div class="p-2">Estate 2022</div>
+              </div>
+            </div>
+            <div class="d-flex col">
+              <img
+                src="./assets/imgs/main/image-18.jpg"
+                style="max-height: 70px"
+              />
+              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+                <div class="p-2">Estate 2022</div>
+              </div>
+            </div>
+            <div class="d-flex col">
+              <img
+                src="./assets/imgs/main/image-18.jpg"
+                style="max-height: 70px"
+              />
+              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+                <div class="p-2">Estate 2022</div>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex justify-content-between align-items-center my-3">
+            <h5>Altro di ciò che ti piace</h5>
+            <p class="small_txt text-muted m-0">VISUALIZZA TUTTO</p>
+          </div>
+
+          <div class="row row-cols-5">
+            <!-- CARDS ALTRO -->
+            <div class="col">
+              <div class="card">
+                <img src="./assets/imgs/main/image-1.jpg" style="max-height:
+                150px"" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title fs-6">Card title</h5>
+                  <p class="card-text small_txt text-muted">
+                    This is a longer card
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="./assets/imgs/main/image-1.jpg" style="max-height:
+                150px"" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title fs-6">Card title</h5>
+                  <p class="card-text small_txt text-muted">
+                    This is a longer card
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="./assets/imgs/main/image-1.jpg" style="max-height:
+                150px"" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title fs-6">Card title</h5>
+                  <p class="card-text small_txt text-muted">
+                    This is a longer card
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="./assets/imgs/main/image-1.jpg" style="max-height:
+                150px"" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title fs-6">Card title</h5>
+                  <p class="card-text small_txt text-muted">
+                    This is a longer card
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="./assets/imgs/main/image-1.jpg" style="max-height:
+                150px"" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title fs-6">Card title</h5>
+                  <p class="card-text small_txt text-muted">
+                    This is a longer card
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- SM/MD None -->
+          </div>
+        </div>
+
+        <div class="col-2 activity bg-black">
+          <div class="side-title">
+            <div class="title">
+              <h6>Attività Amici</h6>
+            </div>
+            <div class="icon">
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white border-dark border-dark"
+              >
+                <img src="./assets/imgs/user-plus.svg" width="20" alt="user"
+              /></a>
+              <a
+                href="#"
+                class="list-group-item bg-transparent text-white border-dark border-dark"
+              >
+                <img class="ms-2" src="./assets/imgs/x.svg" width="20" alt="x"
+              /></a>
+            </div>
+          </div>
+          <div class="mt-4">
+            <div class="friend-item d-flex align-items-center mb-3">
+              <img
+                src="./assets/imgs/search/image-1.jpeg"
+                alt="Profile Picture"
+                class="rounded-circle me-2"
+                width="35"
+              />
+              <div>
+                <strong>Charlie Hookham</strong> <br />
+                <small>In Camera - Yumi Zouma</small><br />
+                <small>EP III</small>
+              </div>
+              <small class="ms-auto">4 ore</small>
+            </div>
+            <div class="friend-item d-flex align-items-center mb-3">
+              <img
+                src="./assets/imgs/search/image-1.jpeg"
+                alt="Profile Picture"
+                class="rounded-circle me-2"
+                width="35"
+              />
+              <div>
+                <strong>lightdark02</strong> <br />
+                <small>Aimed to Kill - Jade LeMac</small><br />
+                <small>Aimed to Kill</small>
+              </div>
+              <small class="ms-auto">8 ore</small>
+            </div>
+            <div class="friend-item d-flex align-items-center mb-3">
+              <img
+                src="./assets/imgs/search/image-1.jpeg"
+                alt="Profile Picture"
+                class="rounded-circle me-2"
+                width="35"
+              />
+              <div>
+                <strong>Valeria Traverso</strong> <br />
+                <small>New Kings - Sleeping Wolf</small><br />
+                <small>Twint Badass mood</small>
+              </div>
+              <small class="ms-auto">3 giorni</small>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 justify-content-between"></div>
       </div>
     </div>
     <script
