--- a/homepage.html
+++ b/homepage.html
@@ -42,8 +42,14 @@
         background: linear-gradient(11deg, black, transparent, transparent);
       }
 
+      /* UTILITIES */
+
       .small_txt {
         font-size: x-small;
+      }
+
+      .bg_two {
+        background-color: #33393f;
       }
 
       body {
@@ -270,7 +276,7 @@
                 src="./assets/imgs/main/image-18.jpg"
                 style="max-height: 70px"
               />
-              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+              <div class="d-flex align-items-center bg_two flex-grow-1">
                 <div class="p-2">Estate 2022</div>
               </div>
             </div>
@@ -279,7 +285,7 @@
                 src="./assets/imgs/main/image-18.jpg"
                 style="max-height: 70px"
               />
-              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+              <div class="d-flex align-items-center bg_two flex-grow-1">
                 <div class="p-2">Estate 2022</div>
               </div>
             </div>
@@ -288,7 +294,7 @@
                 src="./assets/imgs/main/image-18.jpg"
                 style="max-height: 70px"
               />
-              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+              <div class="d-flex align-items-center bg_two flex-grow-1">
                 <div class="p-2">Estate 2022</div>
               </div>
             </div>
@@ -297,7 +303,7 @@
                 src="./assets/imgs/main/image-18.jpg"
                 style="max-height: 70px"
               />
-              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+              <div class="d-flex align-items-center bg_two flex-grow-1">
                 <div class="p-2">Estate 2022</div>
               </div>
             </div>
@@ -306,7 +312,7 @@
                 src="./assets/imgs/main/image-18.jpg"
                 style="max-height: 70px"
               />
-              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+              <div class="d-flex align-items-center bg_two flex-grow-1">
                 <div class="p-2">Estate 2022</div>
               </div>
             </div>
@@ -315,7 +321,7 @@
                 src="./assets/imgs/main/image-18.jpg"
                 style="max-height: 70px"
               />
-              <div class="d-flex align-items-center bg-secondary flex-grow-1">
+              <div class="d-flex align-items-center bg_two flex-grow-1">
                 <div class="p-2">Estate 2022</div>
               </div>
             </div>
@@ -325,7 +331,7 @@
             <p class="small_txt text-muted m-0">VISUALIZZA TUTTO</p>
           </div>
 
-          <div class="row row-cols-5">
+          <div class="row row-sm-cols-2 row-lg-cols-5">
             <!-- CARDS ALTRO -->
             <div class="col">
               <div class="card">
