--- a/album.html
+++ b/album.html
@@ -35,14 +35,14 @@
             <div class="collapse" id="collapseExample">
               <ul>
                 <li class="d-flex align-items-center mt-2">
-                  <i class="bi bi-house-door-fill"> <!-- da scolorare -stefano --> </i><a class="nav-link" href="./homepage.html">Home</a>
+                  <i class="bi bi-house-door"> <!-- da scolorare -stefano --> </i><a class="nav-link" href="./homepage.html">Home</a>
                 </li>
                 <li id="search" class="d-flex align-items-center mt-2">
                   <i class="bi bi-search"></i><a class="nav-link" href="./search.html">Cerca</a>
                 </li>
                 <li class="d-flex align-items-center mt-2">
                   <!-- da scolorare -stefano -->
-                  <i class="bi bi-collection-fill"></i><a class="nav-link" href="#">La Tua Libreria</a>
+                  <i class="bi bi-collection"></i><a class="nav-link" href="#">La Tua Libreria</a>
                 </li>
               </ul>
             </div>
@@ -181,8 +181,8 @@
             <div class="d-flex fs-5 justify-content-between text-white align-items-center mb-3">
               <span style="font-size: 1rem">Attività Amici</span>
               <div class="sideIconsRx d-flex justify-content-between">
-                <i class="bi bi-person-plus me-2" style="font-size: 1.3rem"></i>
-                <i class="bi bi-x-lg" style="font-size: 1.3rem"></i>
+                <i class="bi bi-person-plus me-2 text-white" style="font-size: 1.3rem"></i>
+                <i class="bi bi-x-lg text-white" style="font-size: 1.3rem"></i>
               </div>
             </div>
             <div class="row d-flex flex-nowrap">
