centro work in progress

--- a/album.html
+++ b/album.html
@@ -20,7 +20,7 @@
       <div class="row">
         <!-- NAVBAR DI SINISTRA -->
 
-        <div class="d-none d-md-block col-md-3 py-3 bg-black2">
+        <div class="d-none d-md-block col-md-3 py-3 pe-0 bg-black2">
           <nav>
             <a
               class="text-white"
@@ -34,16 +34,11 @@
             </a>
             <div class="collapse" id="collapseExample">
               <ul>
-                <li class="d-flex align-items-center mt-2">
-                  <i class="bi bi-house-door"> <!-- da scolorare -stefano --> </i><a class="nav-link" href="./homepage.html">Home</a>
-                </li>
+                <li class="d-flex align-items-center mt-2"><i class="bi bi-house-door"></i><a class="nav-link" href="./homepage.html">Home</a></li>
                 <li id="search" class="d-flex align-items-center mt-2">
                   <i class="bi bi-search"></i><a class="nav-link" href="./search.html">Cerca</a>
                 </li>
-                <li class="d-flex align-items-center mt-2">
-                  <!-- da scolorare -stefano -->
-                  <i class="bi bi-collection"></i><a class="nav-link" href="#">La Tua Libreria</a>
-                </li>
+                <li class="d-flex align-items-center mt-2"><i class="bi bi-collection"></i><a class="nav-link" href="#">La Tua Libreria</a></li>
               </ul>
             </div>
             <div class="cont_list_nav2 mt-2">
@@ -58,7 +53,7 @@
           </nav>
 
           <hr class="division ms-1" />
-          <div id="side-scroll" class="custom-padding m-2">
+          <div id="side-scroll" class="custom-padding ms-2">
             <ul>
               <li>
                 <a class="nav-link pb-2 pb-2" href="#">early stage emily syndrome (sett-ott 2022)</a>
@@ -152,12 +147,12 @@
 
         <!-- PARTE CENTALE -->
 
-        <div class="col-12 col-md-10 col-lg-7 text-white MainContent p-0 pb-5" id="MainContentArtist">
+        <div class="col-12 col-md-9 col-lg-7 text-white MainContent pt-2 pb-5 px-0 bg-primary-subtle bg-gradient" id="MainContentAlbum">
           <div class="barraUtente d-flex justify-content-between align-items-center">
-            <div class="ps-2">
-              <button class="btn px-1" type="button">
+            <div class="ps-4">
+              <button class="btn p-1" type="button">
                 <i class="bi bi-arrow-left-circle fs-4 text-secondary"></i></button
-              ><button class="btn px-1" type="button">
+              ><button class="btn p-1" type="button">
                 <i class="bi bi-arrow-right-circle fs-4 text-secondary"></i>
               </button>
             </div>
@@ -172,11 +167,112 @@
               </ul>
             </div>
           </div>
+          <div class="d-flex px-3 pt-3">
+            <div>
+              <img src="./assets/imgs/search/image-16.jpg" style="max-height: 170px" />
+            </div>
+            <div class="ps-3 pt-4">
+              <small>ALBUM</small> <br />
+              <strong class="fs-1 fw-bold">Soul Lounge</strong> <br />
+              <div class="d-flex align-items-center pt-4">
+                <img src="./assets/imgs/main/image-18.jpg" width="25" class="rounded-circle shadow" />
+                <small class="px-2">Pinguini Tattici Nucleari • 2017 • 12 brani,<span class="opacity-50"> 53 min 20 sec.</span></small>
+              </div>
+            </div>
+          </div>
+          <div id="mainCenter" class="bg-body-tertiary mt-3 text-decoration-none" style="--bs-bg-opacity: 0.5">
+            <div class="row song-list">
+              <div class="col-12 song-item d-flex align-items-center opacity-50 pt-2">
+                <div class="col-1"></div>
+                <div class="col-1">#</div>
+                <div class="col-6">TITOLO</div>
+                <div class="col-3">RIPRODUZIONI</div>
+                <div class="col-1"><i class="bi bi-clock"></i></div>
+              </div>
+              <hr />
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">1</div>
+                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">694,578</div>
+                <div class="col-1">1:28</div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <!-- PARTE DI DESTRA -->
-        <!-- ancora da alineare/finire -->
-        <div class="siderbarRx d-none d-lg-block col-lg-2 bg-black2 pt-3">
+        <div class="siderbarRx d-none d-lg-block col-lg-2 bg-black2 ps-0">
           <div class="custom-right-side pt-4 container-fluid">
             <div class="d-flex fs-5 justify-content-between text-white align-items-center mb-3">
               <span style="font-size: 1rem">Attività Amici</span>
@@ -185,46 +281,32 @@
                 <i class="bi bi-x-lg text-white" style="font-size: 1.3rem"></i>
               </div>
             </div>
-            <div class="row d-flex flex-nowrap">
-              <div class="col-2">
-                <img src="/assets/imgs/search/image-1.jpeg" alt="dog" width="35" class="imgFriends1" />
+            <div class="friend-item d-flex align-items-center mb-3">
+              <img src="./assets/imgs/main/image-3.jpg" alt="picture" class="rounded-circle ms-1 me-2" width="35" />
+              <div>
+                <strong>Charlie Hookham</strong> <br />
+                <small class="fw-lighter">In Camera - Yumi Zouma</small><br />
+                <small><i class="bi bi-disc pe-1"></i>EP III </small>
               </div>
-              <div class="col-9" id="ok">
-                <div class="justify-content-between ps-1" id="ok">
-                  <p class="mb-0">Charlie Hookham</p>
-                  <p class="mb-0 d-flex justify-content-end">4 ore</p>
-                </div>
-                <p class="mb-0 ps-1">In Camera<i class="bi bi-dot"></i>Yumi Zuma</p>
-                <p class="align-items-center ps-1"><i class="bi bi-disc pe-1"></i>EP III</p>
-              </div>
+              <small class="ms-auto">4 ore</small>
             </div>
-            <div class="row my-3 d-flex flex-nowrap">
-              <div class="col-2">
-                <img src="/assets/imgs/search/image-1.jpeg" alt="dog" width="45" height="45" class="imgFriends1" />
+            <div class="friend-item d-flex align-items-center mb-3">
+              <img src="./assets/imgs/main/image-10.jpg" alt="picture" class="rounded-circle ms-1 me-2" width="35" />
+              <div>
+                <strong>lightdark02</strong> <br />
+                <small class="fw-lighter">Aimed to Kill - Jade LeMac</small><br />
+                <small><i class="bi bi-disc pe-1"></i>Aimed to Kill</small>
               </div>
-              <div class="col-10" id="ok">
-                <div class="justify-content-between ps-1" id="ok">
-                  <p class="mb-0">lightdark02</p>
-                  <p class="mb-0 d-flex justify-content-end">8 ore</p>
-                </div>
-                <p class="mb-0 ps-1">Aimed To Kill<i class="bi bi-dot"></i>Jade LeMac</p>
-                <p class="align-items-center ps-1"><i class="bi bi-disc pe-1"></i>Aimed To Kill</p>
-              </div>
+              <small class="ms-auto">8 ore</small>
             </div>
-            <div class="cont-div-img">
-              <div class="second row d-flex flex-nowrap">
-                <div class="col-2">
-                  <img src="./assets/imgs/search/image-1.jpeg" alt="dog" width="45" height="45" class="imgFriends1" />
-                </div>
-                <div class="col-10" id="ok">
-                  <div class="justify-content-between ps-1" id="ok">
-                    <p class="mb-0">Valeria Traverso</p>
-                    <p class="mb-0 d-flex justify-content-end">3 giorni</p>
-                  </div>
-                  <p class="mb-0 ps-1">New Kings<i class="bi bi-dot"></i>Sleeping Wolf</p>
-                  <p class="align-items-center ps-1"><i class="bi bi-music-note-beamed pe-1"></i>Twint Badass mood</p>
-                </div>
+            <div class="friend-item d-flex align-items-center mb-3">
+              <img src="./assets/imgs/main/image-11.jpg" alt="picture" class="rounded-circle ms-1 me-2" width="35" />
+              <div>
+                <strong>Valeria Traverso</strong> <br />
+                <small class="fw-lighter">New Kings - Sleeping Wolf</small><br />
+                <small><i class="bi bi-music-note-beamed pe-1"></i>Twint Badass mood</small>
               </div>
+              <small class="ms-auto">3 giorni</small>
             </div>
           </div>
         </div>
