--- a/album.html
+++ b/album.html
@@ -181,16 +181,23 @@
             </div>
           </div>
           <div id="mainCenter" class="bg-body-tertiary mt-3 text-decoration-none" style="--bs-bg-opacity: 0.5">
+            <div class="d-flex align-items-center">
+              <i class="fs-1 ms-5 bi bi-play-circle text-success"></i>
+              <i class="fs-5 bi bi-heart ms-4"></i>
+              <i class="fs-5 bi bi-download ms-4"></i>
+              <i class="fs-5 bi bi-three-dots ms-4"></i>
+            </div>
+
             <div class="row song-list">
-              <div class="col-12 song-item d-flex align-items-center opacity-50 pt-2">
-                <div class="col-1"></div>
-                <div class="col-1">#</div>
-                <div class="col-6">TITOLO</div>
-                <div class="col-3">RIPRODUZIONI</div>
-                <div class="col-1"><i class="bi bi-clock"></i></div>
+              <div class="col-12 song-item d-flex align-items-center opacity-50 pt-2 border-bottom">
+                <small class="col-1"></small>
+                <small class="col-1">#</small>
+                <small class="col-6">TITOLO</small>
+                <small class="col-3">RIPRODUZIONI</small>
+                <small class="col-1"><i class="bi bi-clock"></i></small>
               </div>
-              <hr />
-              <div class="col-12 song-item d-flex align-items-center">
+
+              <div class="col-12 song-item d-flex align-items-center mt-3">
                 <div class="col-1"></div>
                 <div class="col-1">1</div>
                 <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
@@ -199,71 +206,71 @@
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-1">2</div>
+                <div class="col-6">Sciare<br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">1,294,678</div>
+                <div class="col-1">2:49</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">3</div>
+                <div class="col-6">Gioventù Brucata <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">974,578</div>
+                <div class="col-1">2:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">4</div>
+                <div class="col-6">Ninnananna per genitori disattenti<br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">6,394,078</div>
+                <div class="col-1">4:08</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">5</div>
+                <div class="col-6">L'uomo che inventò il fuoco<br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">294,070</div>
+                <div class="col-1">4:21</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">6</div>
+                <div class="col-6">Irene <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-3">1,094,578</div>
+                <div class="col-1">3:28</div>
+              </div>
+              <div class="col-12 song-item d-flex align-items-center">
+                <div class="col-1"></div>
+                <div class="col-1">7</div>
+                <div class="col-6">Senti che cantare questi <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-1">8</div>
+                <div class="col-6">Pula <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-1">9</div>
+                <div class="col-6">Ocean Avenue <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-1">10</div>
+                <div class="col-6">Only One <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
               <div class="col-12 song-item d-flex align-items-center">
                 <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
-                <div class="col-3">694,578</div>
-                <div class="col-1">1:28</div>
-              </div>
-              <div class="col-12 song-item d-flex align-items-center">
-                <div class="col-1"></div>
-                <div class="col-1">1</div>
-                <div class="col-6">Montanelli - Intro <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
+                <div class="col-1">12</div>
+                <div class="col-6">Breathing <br /><small class="fw-light opacity-50">Pinguini Tattici Nucleari</small></div>
                 <div class="col-3">694,578</div>
                 <div class="col-1">1:28</div>
               </div>
